--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="title">
         <div>
             <div>
-                <h1>Mattboi95's potato is blessed by rng </h1>
+                <h1>Is mattato is blessed by rngesus? </h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4">
